# sensors-and-senders

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Component.cpp  Component.h  Component.hpp  FmiFunctions.cpp
src/common/fmi/: CMakeLists.txt
src/common/math/: CMakeLists.txt  Conversions.cpp  Conversions.h  MarkovNoise.cpp  MarkovNoise.hpp
src/gps/: CMakeLists.txt  FmiInstantiate.cpp  Gnss.cpp  Gnss.h  Gnss.hpp  GpsComponent.cpp  GpsComponent.h  GpsComponent.hpp  Ned2Llh.cpp  Ned2Llh.hpp  UtcTime.cpp  UtcTime.h  modelDescription.xml
src/gyro/: CMakeLists.txt  FmiInstantiate.cpp  Gyro.cpp  Gyro.h  Gyro.hpp  GyroComponent.cpp  GyroComponent.h  GyroComponent.hpp  modelDescription.xml
src/nmea-sender/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  ConfigParser.hpp  Enums.cpp  Enums.hpp  FmiInstantiate.cpp  NmeaSenderComponent.cpp  NmeaSenderComponent.h  NmeaSenderComponent.hpp  NmeaTelegram.cpp  NmeaTelegram.h  NmeaTelegram.hpp  UdpSender.cpp  UdpSender.h  UdpSender.hpp
src/nmea-sender/config/gps/: modelDescription.xml
src/nmea-sender/config/gps/resources/: NmeaConfig.json
src/nmea-sender/config/gyro/: modelDescription.xml
src/nmea-sender/config/gyro/resources/: NmeaConfig.json
src/nmea-sender/config/thruster_feedback/: modelDescription.xml
src/nmea-sender/config/thruster_feedback/resources/: NmeaConfig.json
src/nmea-sender/config/vru/: modelDescription.xml
src/nmea-sender/config/vru/resources/: NmeaConfig.json
src/nmea-sender/config/wind/: modelDescription.xml
src/nmea-sender/config/wind/resources/: NmeaConfig.json
src/vru/: CMakeLists.txt  FmiInstantiate.cpp  Vru.cpp  Vru.h  Vru.hpp  VruComponent.cpp  VruComponent.h  VruComponent.hpp  modelDescription.xml
src/wind_sensor/: CMakeLists.txt  FmiInstantiate.cpp  WindSensor.cpp  WindSensor.h  WindSensor.hpp  WindSensorComponent.cpp  WindSensorComponent.h  WindSensorComponent.hpp  modelDescription.xml
